Name:               org-monad
Version:            0.0.1
-- Synopsis:
-- Description:
Homepage:           http://org-monad.adyxax.org/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux
Maintainer:         adyxax@adyxax.org
Category:           OrgMonad
Build-type:         Simple
Cabal-version:      >=1.2

Executable org-monad
  hs-source-dirs:   src
  Main-is:          Main.hs
  Ghc-options:      -Wall
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:    base >= 4.1 && < 5

