Name:               org-monad
Version:            0.0.1
-- Synopsis:
-- Description:
Homepage:           http://org-monad.adyxax.org/
License:            BSD3
License-file:       LICENSE
Author:             Julien Dessaux
Maintainer:         adyxax@adyxax.org
Category:           OrgMonad
Build-type:         Simple
Cabal-version:      >=1.9.2

Executable org-monad
  hs-source-dirs:   prog
  Main-is:          Main.hs
  Ghc-options:      -Wall -fno-warn-orphans
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables
  Build-depends:
    base >= 4.1 && < 5
    , org-monad


Library
  hs-source-dirs:   src
  Ghc-options:      -Wall -fno-warn-orphans
  Extensions:       DeriveDataTypeable FlexibleContexts ScopedTypeVariables MultiParamTypeClasses
  exposed-modules:
    OrgMonad.Type
    , OrgMonad.TypeDecl
    , OrgMonad.Utils
  Build-depends:
    base >= 4.1 && < 5
    , time >= 1.4
    , mtl >= 2.0


Test-Suite test-org-monad
  type                  : detailed-0.9
  hs-source-dirs        : testsuite/src
  Extensions            : TemplateHaskell
  Cpp-options           : -DWITH_TH
  other-modules:
    Distribution.TestSuite.HUnit
    Distribution.TestSuite.QuickCheck2
  test-module           : Test.Suite
  build-depends         :
    base >= 4.1 && < 5
    , Cabal
    , org-monad
    , HUnit >= 1.2
    , random >= 1
    , QuickCheck >= 2.4
    , template-haskell >= 2.6

